# linux-minidisc

./: CMakeLists.txt
cmake/: FindLibUSB.cmake
libnetmd/: CMakeLists.txt  common.c  libnetmd.c  utils.c
netmdcli/: CMakeLists.txt  getopt.h  netmdcli.c
